--- a/Main.xaml
+++ b/Main.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="Main" VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="800,1974.4" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=System.Private.CoreLib" xmlns:uasc="clr-namespace:UiPath.Activities.System.Collections;assembly=UiPath.System.Activities" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Main" VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="821.6,1974.4" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=System.Private.CoreLib" xmlns:uasc="clr-namespace:UiPath.Activities.System.Collections;assembly=UiPath.System.Activities" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
       <x:String>System.Activities</x:String>
@@ -77,7 +77,7 @@
       <AssemblyReference>System.Private.Uri</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="********* By selecting List as the value type, we can associate a dictionary key with multiple values.&#xD;&#xA;&#xD;&#xA;•            The Assign activity is commonly used to assign values to variables in UiPath Studio.&#xD;&#xA;&#xD;&#xA;•            The Variables panel is where you can declare and manage variables in your project. &#xD;&#xA;&#xD;&#xA;•            The Build Collection activity is also used to create and initialize an object, which can then be assigned to a variable. &#xD;&#xA;&#xD;&#xA;•            When working with dictionaries that have list values, only the dictionary needs the New keyword. &#xD;&#xA;&#xD;&#xA;For example, new Dictionary(of String, List(of String)) is the correct way of initializing the dictionary variable as opposed to new Dictionary(of String, new List(of String)) . Hence, we use the New keyword strictly when we have to initialize a variable, not a type of variable.     &#xD;&#xA;&#xD;&#xA;Think of tasks that require you to work with different sets of data, or collections." DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="496,1909.6" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="********* By selecting List as the value type, we can associate a dictionary key with multiple values.&#xA;&#xA;•            The Assign activity is commonly used to assign values to variables in UiPath Studio.&#xA;&#xA;•            The Variables panel is where you can declare and manage variables in your project. &#xA;&#xA;•            The Build Collection activity is also used to create and initialize an object, which can then be assigned to a variable. &#xA;&#xA;•            When working with dictionaries that have list values, only the dictionary needs the New keyword. &#xA;&#xA;For example, new Dictionary(of String, List(of String)) is the correct way of initializing the dictionary variable as opposed to new Dictionary(of String, new List(of String)) . Hence, we use the New keyword strictly when we have to initialize a variable, not a type of variable.     &#xA;&#xA;Think of tasks that require you to work with different sets of data, or collections." DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="496,1909.6" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="scg:Dictionary(x:String, scg:List(x:String))" Name="Cities" />
     </Sequence.Variables>
@@ -100,11 +100,11 @@
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
     </Assign>
-    <uasc:BuildCollection x:TypeArguments="x:String" Items="{x:Null}" sap2010:Annotation.AnnotationText="We use 'Build Collection' activity to collect the data because we want to populate our 'cities Dictionary variable' with the names of US cities.&#xD;&#xA;*** Our Dictionary key here is US. And the Value consists of a List of String which holds the three US city names." DisplayName="Build Collection Cities US" FirstItem="New York" sap:VirtualizedContainerService.HintSize="433.6,250.4" sap2010:WorkflowViewState.IdRef="BuildCollection`1_1" Result="[Cities(&quot;US&quot;)]">
+    <uasc:BuildCollection x:TypeArguments="x:String" Items="{x:Null}" sap2010:Annotation.AnnotationText="We use 'Build Collection' activity to collect the data because we want to populate our 'cities Dictionary variable' with the names of US cities.&#xA;*** Our Dictionary key here is US. And the Value consists of a List of String which holds the three US city names." DisplayName="Build Collection Cities US" FirstItem="New York" sap:VirtualizedContainerService.HintSize="433.6,250.4" sap2010:WorkflowViewState.IdRef="BuildCollection`1_1" Result="[Cities(&quot;US&quot;)]">
       <uasc:BuildCollection.NextItems>
         <scg:List x:TypeArguments="InArgument(x:String)" Capacity="4">
           <InArgument x:TypeArguments="x:String">Chicago</InArgument>
-          <InArgument x:TypeArguments="x:String">Seattle</InArgument>
+          <InArgument x:TypeArguments="x:String">New York</InArgument>
           <InArgument x:TypeArguments="x:String">San Francisco</InArgument>
         </scg:List>
       </uasc:BuildCollection.NextItems>
@@ -123,7 +123,7 @@
         </scg:List>
       </uasc:BuildCollection.NextItems>
     </uasc:BuildCollection>
-    <uasc:AppendItemToCollection x:TypeArguments="x:String" sap2010:Annotation.AnnotationText="Adding one extra item to the collection by using 'Append Items to Collection' activity. We added &quot;Portland&quot;.&#xD;&#xA;" Collection="[Cities(&quot;US&quot;)]" DisplayName="Append Items to Collection" sap:VirtualizedContainerService.HintSize="433.6,217.6" sap2010:WorkflowViewState.IdRef="AppendItemToCollection`1_1">
+    <uasc:AppendItemToCollection x:TypeArguments="x:String" sap2010:Annotation.AnnotationText="Adding one extra item to the collection by using 'Append Items to Collection' activity. We added &quot;Portland&quot;.&#xA;" Collection="[Cities(&quot;US&quot;)]" DisplayName="Append Items to Collection" sap:VirtualizedContainerService.HintSize="433.6,217.6" sap2010:WorkflowViewState.IdRef="AppendItemToCollection`1_1">
       <uasc:AppendItemToCollection.Items>
         <scg:List x:TypeArguments="InArgument(x:String)" Capacity="4">
           <InArgument x:TypeArguments="x:String">Portland</InArgument>
@@ -142,7 +142,7 @@
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
     </uasc:RemoveFromCollection>
-    <ui:LogMessage sap2010:Annotation.AnnotationText="vbCr : - return to line beginning. Represents a carriage-return character for print and display functions. &#xD;&#xA;vbCrLf : - similar to pressing Enter. Represents a carriage-return character combined with a linefeed character for print and display functions.&#xD;&#xA; vbLf : - go to next line." DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="433.6,250.4" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[&quot;US Cities: &quot; + String.Join(&quot;, &quot;, Cities(&quot;US&quot;)) + vbLf + &quot;and&quot; + vbLf + &quot;UK Cities: &quot; + String.Join(&quot;, &quot;, Cities(&quot;UK&quot;))]">
+    <ui:LogMessage sap2010:Annotation.AnnotationText="vbCr : - return to line beginning. Represents a carriage-return character for print and display functions. &#xA;vbCrLf : - similar to pressing Enter. Represents a carriage-return character combined with a linefeed character for print and display functions.&#xA; vbLf : - go to next line." DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="433.6,250.4" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[&quot;US Cities: &quot; + String.Join(&quot;, &quot;, Cities(&quot;US&quot;)) + vbLf + &quot;and&quot; + vbLf + &quot;UK Cities: &quot; + String.Join(&quot;, &quot;, Cities(&quot;UK&quot;))]">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
